src/main/java/com/example/weather_application/errors/BlockedUserException.java
package com.example.weather_application.errors;

public class BlockedUserException extends RuntimeException {
    public BlockedUserException(String message) {
        super(message);
    }
}
